bynkc/tests/fixtures/positive/806_locale_browser_platform/src/app/greet.bynk
context app.greet

consumes bynk { Locale }
uses bynk.locale
uses bynk.locale.types

service greeting {
  on call() -> Effect[String] given Locale {
    let tag <- Locale.current()
    Effect.pure(render(tag, message("hello")))
  }
}
