bynkc/tests/fixtures/negative/294_http_cors_not_http/src/jobs.bynk
context jobs

service jobs from cron {
  cors {
    origins: ["https://app.example.com"],
  }

  on schedule("0 0 * * *") () -> Effect[Result[(), String]] {
    Effect.pure(Ok(()))
  }
}
